--new project, with firebase & angular/fire

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" mode="ios">
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Smart Apartment Portal</title>
 
-  <base href="/" />
+  <base href="/"/>
+  <link href="https://fonts.googleapis.com/css?family=Poppins">
 
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
